@@ -77,14 +77,7 @@
                 <version>0.0.8</version>
                 <configuration>
                     <mainClass>test.UserTest.MainFx</mainClass>
-                    <options>
-                        <option>--add-modules=javafx.swing,javafx.graphics,javafx.fxml,javafx.media,javafx.web</option>
-                        <option>--add-opens javafx.controls/com.sun.javafx.charts=ALL-UNNAMED</option>
-                        <option>--add-opens javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED</option>
-                        <option>--add-opens javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED</option>
-                        <option>--add-opens javafx.graphics/com.sun.javafx.css=ALL-UNNAMED</option>
-                        <option>--add-opens javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
-                    </options>
+
                 </configuration>
 
 
